[JSC] Fix Wasm extended op parsing https://bugs.webkit.org/show_bug.cgi?id=250173 rdar://problem/103936859

Reviewed by Keith Miller.

This patch fixes wasm extended op parsing.

1. The payload of the Wasm extended op should be parsed as a VarUint32. This fixes failing spec-test in binary-leb128.wast.js.
2. Wasm GC extended ops are inconsistently named. This patch fixes them.
3. Align Wasm SIMD extended op parsing code to the other extended op parsing code.

* JSTests/wasm/spec-tests/binary-leb128.wast.js:
* Source/JavaScriptCore/wasm/WasmAirIRGeneratorBase.h:
(JSC::Wasm::ExpressionType>::addArrayGet):
* Source/JavaScriptCore/wasm/WasmB3IRGenerator.cpp:
(JSC::Wasm::B3IRGenerator::addArrayGet):
* Source/JavaScriptCore/wasm/WasmFunctionParser.h:
(JSC::Wasm::FunctionParser<Context>::parseExpression):
(JSC::Wasm::FunctionParser<Context>::parseUnreachableExpression):
* Source/JavaScriptCore/wasm/WasmLLIntGenerator.cpp:
(JSC::Wasm::LLIntGenerator::addArrayGet):
* Source/JavaScriptCore/wasm/WasmSlowPaths.cpp:
(JSC::LLInt::WASM_SLOW_PATH_DECL):
* Source/JavaScriptCore/wasm/WasmTypeDefinition.h:
* Source/JavaScriptCore/wasm/generateWasmOpsHeader.py:

Canonical link: https://commits.webkit.org/258698@main