Source/JavaScriptCore/wasm/WasmFunctionParser.h
@@ -1560,8 +1560,8 @@ FOR_EACH_WASM_MEMORY_STORE_OP(CREATE_CASE)
     }
 
     case Ext1: {
-        uint8_t extOp;
-        WASM_PARSER_FAIL_IF(!parseUInt8(extOp), "can't parse 0xfc extended opcode");
+        uint32_t extOp;
+        WASM_PARSER_FAIL_IF(!parseVarUInt32(extOp), "can't parse 0xfc extended opcode");
 
         Ext1OpType op = static_cast<Ext1OpType>(extOp);
         switch (op) {
@@ -1733,15 +1733,15 @@ FOR_EACH_WASM_MEMORY_STORE_OP(CREATE_CASE)
         return { };
     }
 
-    case GCPrefix: {
+    case ExtGC: {
         WASM_PARSER_FAIL_IF(!Options::useWebAssemblyGC(), "Wasm GC is not enabled");
 
-        uint8_t extOpInt;
-        WASM_PARSER_FAIL_IF(!parseUInt8(extOpInt), "can't parse extended GC opcode");
+        uint32_t extOp;
+        WASM_PARSER_FAIL_IF(!parseVarUInt32(extOp), "can't parse extended GC opcode");
 
-        GCOpType extOp = static_cast<GCOpType>(extOpInt);
-        switch (extOp) {
-        case GCOpType::I31New: {
+        ExtGCOpType op = static_cast<ExtGCOpType>(extOp);
+        switch (op) {
+        case ExtGCOpType::I31New: {
             TypedExpression value;
             WASM_TRY_POP_EXPRESSION_STACK_INTO(value, "i31.new");
             WASM_VALIDATOR_FAIL_IF(!value.type().isI32(), "i31.new value to type ", value.type(), " expected ", TypeKind::I32);
@@ -1752,7 +1752,7 @@ FOR_EACH_WASM_MEMORY_STORE_OP(CREATE_CASE)
             m_expressionStack.constructAndAppend(Type { TypeKind::Ref, static_cast<TypeIndex>(TypeKind::I31ref) }, result);
             return { };
         }
-        case GCOpType::I31GetS: {
+        case ExtGCOpType::I31GetS: {
             TypedExpression ref;
             WASM_TRY_POP_EXPRESSION_STACK_INTO(ref, "i31.get_s");
             WASM_VALIDATOR_FAIL_IF(!isI31ref(ref.type()), "i31.get_s ref to type ", ref.type(), " expected ", TypeKind::I31ref);
@@ -1763,7 +1763,7 @@ FOR_EACH_WASM_MEMORY_STORE_OP(CREATE_CASE)
             m_expressionStack.constructAndAppend(Types::I32, result);
             return { };
         }
-        case GCOpType::I31GetU: {
+        case ExtGCOpType::I31GetU: {
             TypedExpression ref;
             WASM_TRY_POP_EXPRESSION_STACK_INTO(ref, "i31.get_u");
             WASM_VALIDATOR_FAIL_IF(!isI31ref(ref.type()), "i31.get_u ref to type ", ref.type(), " expected ", TypeKind::I31ref);
@@ -1774,7 +1774,7 @@ FOR_EACH_WASM_MEMORY_STORE_OP(CREATE_CASE)
             m_expressionStack.constructAndAppend(Types::I32, result);
             return { };
         }
-        case GCOpType::ArrayNew: {
+        case ExtGCOpType::ArrayNew: {
             uint32_t typeIndex;
             WASM_PARSER_FAIL_IF(!parseVarUInt32(typeIndex), "can't get type index for array.new");
             WASM_VALIDATOR_FAIL_IF(typeIndex >= m_info.typeCount(), "array.new index ", typeIndex, " is out of bounds");
@@ -1796,7 +1796,7 @@ FOR_EACH_WASM_MEMORY_STORE_OP(CREATE_CASE)
             m_expressionStack.constructAndAppend(Type { TypeKind::Ref, TypeInformation::get(typeDefinition) }, result);
             return { };
         }
-        case GCOpType::ArrayNewDefault: {
+        case ExtGCOpType::ArrayNewDefault: {
             uint32_t typeIndex;
             WASM_PARSER_FAIL_IF(!parseVarUInt32(typeIndex), "can't get type index for array.new_default");
             WASM_VALIDATOR_FAIL_IF(typeIndex >= m_info.typeCount(), "array.new_default index ", typeIndex, " is out of bounds");
@@ -1816,11 +1816,11 @@ FOR_EACH_WASM_MEMORY_STORE_OP(CREATE_CASE)
             m_expressionStack.constructAndAppend(Type { TypeKind::Ref, TypeInformation::get(typeDefinition) }, result);
             return { };
         }
-        case GCOpType::ArrayGet:
-        case GCOpType::ArrayGetS:
-        case GCOpType::ArrayGetU: {
+        case ExtGCOpType::ArrayGet:
+        case ExtGCOpType::ArrayGetS:
+        case ExtGCOpType::ArrayGetU: {
             uint32_t typeIndex;
-            const char* opName = extOp == GCOpType::ArrayGet ? "array.get" : extOp == GCOpType::ArrayGetS ? "array.get_s" : "array.get_u";
+            const char* opName = op == ExtGCOpType::ArrayGet ? "array.get" : op == ExtGCOpType::ArrayGetS ? "array.get_s" : "array.get_u";
             WASM_PARSER_FAIL_IF(!parseVarUInt32(typeIndex), "can't get type index for ", opName);
             WASM_VALIDATOR_FAIL_IF(typeIndex >= m_info.typeCount(), opName, " index ", typeIndex, " is out of bounds");
 
@@ -1831,11 +1831,11 @@ FOR_EACH_WASM_MEMORY_STORE_OP(CREATE_CASE)
             const Type resultType = elementType.unpacked();
 
             // array.get_s and array.get_u are only valid for packed arrays
-            if (extOp == GCOpType::ArrayGetS || extOp == GCOpType::ArrayGetU)
+            if (op == ExtGCOpType::ArrayGetS || op == ExtGCOpType::ArrayGetU)
                 WASM_PARSER_FAIL_IF(!elementType.is<PackedType>(), opName, " applied to wrong type of array -- expected: i8 or i16, found ", elementType.as<Type>().kind);
 
             // array.get is not valid for packed arrays
-            if (extOp == GCOpType::ArrayGet)
+            if (op == ExtGCOpType::ArrayGet)
                 WASM_PARSER_FAIL_IF(elementType.is<PackedType>(), opName, " applied to packed array of ", elementType.as<PackedType>(), " -- use array.get_s or array.get_u");
 
             TypedExpression arrayref, index;
@@ -1845,12 +1845,12 @@ FOR_EACH_WASM_MEMORY_STORE_OP(CREATE_CASE)
             WASM_VALIDATOR_FAIL_IF(TypeKind::I32 != index.type().kind, "array.get index to type ", index.type(), " expected ", TypeKind::I32);
 
             ExpressionType result;
-            WASM_TRY_ADD_TO_CONTEXT(addArrayGet(extOp, typeIndex, arrayref, index, result));
+            WASM_TRY_ADD_TO_CONTEXT(addArrayGet(op, typeIndex, arrayref, index, result));
 
             m_expressionStack.constructAndAppend(resultType, result);
             return { };
         }
-        case GCOpType::ArraySet: {
+        case ExtGCOpType::ArraySet: {
             uint32_t typeIndex;
             WASM_PARSER_FAIL_IF(!parseVarUInt32(typeIndex), "can't get type index for array.set");
             WASM_VALIDATOR_FAIL_IF(typeIndex >= m_info.typeCount(), "array.set index ", typeIndex, " is out of bounds");
@@ -1875,7 +1875,7 @@ FOR_EACH_WASM_MEMORY_STORE_OP(CREATE_CASE)
 
             return { };
         }
-        case GCOpType::ArrayLen: {
+        case ExtGCOpType::ArrayLen: {
             TypedExpression arrayref;
             WASM_TRY_POP_EXPRESSION_STACK_INTO(arrayref, "array.len");
             WASM_VALIDATOR_FAIL_IF(!isSubtype(arrayref.type(), Type { TypeKind::RefNull, static_cast<TypeIndex>(TypeKind::Arrayref) }), "array.len value to type ", arrayref.type(), " expected arrayref");
@@ -1888,8 +1888,8 @@ FOR_EACH_WASM_MEMORY_STORE_OP(CREATE_CASE)
         }
         // The struct.new and struct.new_canon instructions are identical but with different opcodes for compatibility with both the spec & other implementations.
         // FIXME: Remove this redundancy when the GC proposal's opcode numbering is finalized.
-        case GCOpType::StructNew:
-        case GCOpType::StructNewCanon: {
+        case ExtGCOpType::StructNew:
+        case ExtGCOpType::StructNewCanon: {
             uint32_t typeIndex;
             WASM_FAIL_IF_HELPER_FAILS(parseStructTypeIndex(typeIndex, "struct.new"));
 
@@ -1916,8 +1916,8 @@ FOR_EACH_WASM_MEMORY_STORE_OP(CREATE_CASE)
             m_expressionStack.constructAndAppend(Type { TypeKind::Ref, typeDefinition->index() }, result);
             return { };
         }
-        case GCOpType::StructNewDefault:
-        case GCOpType::StructNewCanonDefault: {
+        case ExtGCOpType::StructNewDefault:
+        case ExtGCOpType::StructNewCanonDefault: {
             uint32_t typeIndex;
             WASM_FAIL_IF_HELPER_FAILS(parseStructTypeIndex(typeIndex, "struct.new_default"));
 
@@ -1932,7 +1932,7 @@ FOR_EACH_WASM_MEMORY_STORE_OP(CREATE_CASE)
             m_expressionStack.constructAndAppend(Type { TypeKind::Ref, typeDefinition->index() }, result);
             return { };
         }
-        case GCOpType::StructGet: {
+        case ExtGCOpType::StructGet: {
             StructFieldManipulation structGetInput;
             WASM_PARSER_FAIL_IF(!parseStructFieldManipulation(structGetInput, "struct.get"));
 
@@ -1943,7 +1943,7 @@ FOR_EACH_WASM_MEMORY_STORE_OP(CREATE_CASE)
             m_expressionStack.constructAndAppend(structGetInput.field.type.unpacked(), result);
             return { };
         }
-        case GCOpType::StructSet: {
+        case ExtGCOpType::StructSet: {
             TypedExpression value;
             WASM_TRY_POP_EXPRESSION_STACK_INTO(value, "struct.set value");
 
@@ -1959,15 +1959,15 @@ FOR_EACH_WASM_MEMORY_STORE_OP(CREATE_CASE)
             return { };
         }
         default:
-            WASM_PARSER_FAIL_IF(true, "invalid extended GC op ", extOpInt);
+            WASM_PARSER_FAIL_IF(true, "invalid extended GC op ", extOp);
             break;
         }
         return { };
     }
 
     case ExtAtomic: {
-        uint8_t extOp;
-        WASM_PARSER_FAIL_IF(!parseUInt8(extOp), "can't parse atomic extended opcode");
+        uint32_t extOp;
+        WASM_PARSER_FAIL_IF(!parseVarUInt32(extOp), "can't parse atomic extended opcode");
 
         ExtAtomicOpType op = static_cast<ExtAtomicOpType>(extOp);
 
@@ -2614,13 +2614,12 @@ FOR_EACH_WASM_MEMORY_STORE_OP(CREATE_CASE)
     case ExtSIMD: {
         WASM_PARSER_FAIL_IF(!Options::useWebAssemblySIMD(), "wasm-simd is not enabled");
         m_context.notifyFunctionUsesSIMD();
-        uint8_t simdOp;
-        WASM_PARSER_FAIL_IF(!parseUInt8(simdOp), "can't parse wasm extended opcode");
+        uint32_t extOp;
+        WASM_PARSER_FAIL_IF(!parseVarUInt32(extOp), "can't parse wasm extended opcode");
 
         constexpr bool isReachable = true;
 
-        ExtSIMDOpType op = static_cast<ExtSIMDOpType>(simdOp);
-
+        ExtSIMDOpType op = static_cast<ExtSIMDOpType>(extOp);
         if (UNLIKELY(Options::dumpWasmOpcodeStatistics()))
             WasmOpcodeCounter::singleton().increment(op);
 
@@ -2632,7 +2631,7 @@ FOR_EACH_WASM_MEMORY_STORE_OP(CREATE_CASE)
         FOR_EACH_WASM_EXT_SIMD_REL_OP(CREATE_SIMD_CASE)
         #undef CREATE_SIMD_CASE
         default:
-            WASM_PARSER_FAIL_IF(true, "invalid extended simd op ", simdOp);
+            WASM_PARSER_FAIL_IF(true, "invalid extended simd op ", extOp);
             break;
         }
         return { };
@@ -2865,8 +2864,8 @@ auto FunctionParser<Context>::parseUnreachableExpression() -> PartialResult
     }
 
     case Ext1: {
-        uint8_t extOp;
-        WASM_PARSER_FAIL_IF(!parseUInt8(extOp), "can't parse extended 0xfc opcode");
+        uint32_t extOp;
+        WASM_PARSER_FAIL_IF(!parseVarUInt32(extOp), "can't parse extended 0xfc opcode");
 
         switch (static_cast<Ext1OpType>(extOp)) {
         case Ext1OpType::TableInit: {
@@ -2944,72 +2943,72 @@ auto FunctionParser<Context>::parseUnreachableExpression() -> PartialResult
         return { };
     }
 
-    case GCPrefix: {
+    case ExtGC: {
         WASM_PARSER_FAIL_IF(!Options::useWebAssemblyGC(), "Wasm GC is not enabled");
 
-        uint8_t extOp;
-        WASM_PARSER_FAIL_IF(!parseUInt8(extOp), "can't parse extended GC opcode");
+        uint32_t extOp;
+        WASM_PARSER_FAIL_IF(!parseVarUInt32(extOp), "can't parse extended GC opcode");
 
-        GCOpType op = static_cast<GCOpType>(extOp);
+        ExtGCOpType op = static_cast<ExtGCOpType>(extOp);
 
         if (UNLIKELY(Options::dumpWasmOpcodeStatistics()))
             WasmOpcodeCounter::singleton().increment(op);
 
         switch (op) {
-        case GCOpType::I31New:
-        case GCOpType::I31GetS:
-        case GCOpType::I31GetU:
+        case ExtGCOpType::I31New:
+        case ExtGCOpType::I31GetS:
+        case ExtGCOpType::I31GetU:
             return { };
-        case GCOpType::ArrayNew: {
+        case ExtGCOpType::ArrayNew: {
             uint32_t unused;
             WASM_PARSER_FAIL_IF(!parseVarUInt32(unused), "can't get type index immediate for array.new in unreachable context");
             return { };
         }
-        case GCOpType::ArrayNewDefault: {
+        case ExtGCOpType::ArrayNewDefault: {
             uint32_t unused;
             WASM_PARSER_FAIL_IF(!parseVarUInt32(unused), "can't get type index immediate for array.new_default in unreachable context");
             return { };
         }
-        case GCOpType::ArrayGet: {
+        case ExtGCOpType::ArrayGet: {
             uint32_t unused;
             WASM_PARSER_FAIL_IF(!parseVarUInt32(unused), "can't get type index immediate for array.get in unreachable context");
             return { };
         }
-        case GCOpType::ArrayGetS: {
+        case ExtGCOpType::ArrayGetS: {
             uint32_t unused;
             WASM_PARSER_FAIL_IF(!parseVarUInt32(unused), "can't get type index immediate for array.get_s in unreachable context");
             return { };
         }
-        case GCOpType::ArrayGetU: {
+        case ExtGCOpType::ArrayGetU: {
             uint32_t unused;
             WASM_PARSER_FAIL_IF(!parseVarUInt32(unused), "can't get type index immediate for array.get_u in unreachable context");
             return { };
         }
-        case GCOpType::ArraySet: {
+        case ExtGCOpType::ArraySet: {
             uint32_t unused;
             WASM_PARSER_FAIL_IF(!parseVarUInt32(unused), "can't get type index immediate for array.set in unreachable context");
             return { };
         }
-        case GCOpType::ArrayLen:
+        case ExtGCOpType::ArrayLen:
             return { };
-        case GCOpType::StructNew:
-        case GCOpType::StructNewCanon: {
+        case ExtGCOpType::StructNew:
+        case ExtGCOpType::StructNewCanon: {
             uint32_t unused;
             WASM_FAIL_IF_HELPER_FAILS(parseStructTypeIndex(unused, "struct.new"));
             return { };
         }
-        case GCOpType::StructNewDefault:
-        case GCOpType::StructNewCanonDefault: {
+        case ExtGCOpType::StructNewDefault:
+        case ExtGCOpType::StructNewCanonDefault: {
             uint32_t unused;
             WASM_FAIL_IF_HELPER_FAILS(parseStructTypeIndex(unused, "struct.new_default"));
             return { };
         }
-        case GCOpType::StructGet: {
+        case ExtGCOpType::StructGet: {
             StructTypeIndexAndFieldIndex unused;
             WASM_FAIL_IF_HELPER_FAILS(parseStructTypeIndexAndFieldIndex(unused, "struct.get"));
             return { };
         }
-        case GCOpType::StructSet: {
+        case ExtGCOpType::StructSet: {
             StructTypeIndexAndFieldIndex unused;
             WASM_FAIL_IF_HELPER_FAILS(parseStructTypeIndexAndFieldIndex(unused, "struct.set"));
             return { };
@@ -3032,8 +3031,8 @@ auto FunctionParser<Context>::parseUnreachableExpression() -> PartialResult
 
 #define CREATE_ATOMIC_CASE(name, ...) case ExtAtomicOpType::name:
     case ExtAtomic: {
-        uint8_t extOp;
-        WASM_PARSER_FAIL_IF(!parseUInt8(extOp), "can't parse atomic extended opcode");
+        uint32_t extOp;
+        WASM_PARSER_FAIL_IF(!parseVarUInt32(extOp), "can't parse atomic extended opcode");
         ExtAtomicOpType op = static_cast<ExtAtomicOpType>(extOp);
         switch (op) {
         FOR_EACH_WASM_EXT_ATOMIC_LOAD_OP(CREATE_ATOMIC_CASE)
@@ -3077,12 +3076,12 @@ auto FunctionParser<Context>::parseUnreachableExpression() -> PartialResult
     case ExtSIMD: {
         WASM_PARSER_FAIL_IF(!Options::useWebAssemblySIMD(), "wasm-simd is not enabled");
         m_context.notifyFunctionUsesSIMD();
-        uint8_t simdOp;
-        WASM_PARSER_FAIL_IF(!parseUInt8(simdOp), "can't parse wasm extended opcode");
+        uint32_t extOp;
+        WASM_PARSER_FAIL_IF(!parseVarUInt32(extOp), "can't parse wasm extended opcode");
 
         constexpr bool isReachable = false;
 
-        ExtSIMDOpType op = static_cast<ExtSIMDOpType>(simdOp);
+        ExtSIMDOpType op = static_cast<ExtSIMDOpType>(extOp);
         switch (op) {
         #define CREATE_SIMD_CASE(name, _, laneOp, lane, signMode) case ExtSIMDOpType::name: return simd<isReachable>(SIMDLaneOperation::laneOp, lane, signMode);
         FOR_EACH_WASM_EXT_SIMD_GENERAL_OP(CREATE_SIMD_CASE)
@@ -3091,7 +3090,7 @@ auto FunctionParser<Context>::parseUnreachableExpression() -> PartialResult
         FOR_EACH_WASM_EXT_SIMD_REL_OP(CREATE_SIMD_CASE)
         #undef CREATE_SIMD_CASE
         default:
-            WASM_PARSER_FAIL_IF(true, "invalid extended simd op ", simdOp);
+            WASM_PARSER_FAIL_IF(true, "invalid extended simd op ", extOp);
             break;
         }
         return { };
